--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-pager-view": "6.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.4.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0"
   },
