--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "axios": "^1.4.0",
+    "d3": "^7.8.5",
+    "date-fns": "^2.30.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-chart-kit": "^6.12.0",
