--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.8",
